--- a/package.json
+++ b/package.json
@@ -15,14 +15,23 @@
   "private": true,
   "dependencies": {
     "adonis-ace": "^3.0.7",
-    "adonis-auth": "^1.0.5",
+    "adonis-ally": "^1.1.2",
+    "adonis-auth": "^1.0.7",
     "adonis-commands": "^2.1.5",
     "adonis-fold": "^3.0.3",
     "adonis-framework": "^3.0.10",
     "adonis-lucid": "^3.0.14",
     "adonis-middleware": "^1.0.11",
     "adonis-websocket": "^1.0.3",
+    "browserify": "^14.4.0",
+    "fs": "^0.0.1-security",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^3.1.0",
+    "kinesis": "^1.2.2",
     "mysql": "^2.13.0",
+    "sass": "^0.5.0",
+    "vueify": "^9.4.1",
+    "vueify-insert-css": "^1.0.0",
     "youch": "^2.0.4"
   },
   "standard": {
