--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "kinesis": "^1.2.2",
     "mysql": "^2.13.0",
     "sass": "^0.5.0",
+    "vue-resource": "^1.3.3",
     "vueify": "^9.4.1",
     "vueify-insert-css": "^1.0.0",
     "youch": "^2.0.4"
