--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "adonis-lucid": "^3.0.14",
     "adonis-middleware": "^1.0.11",
     "adonis-websocket": "^1.0.3",
+    "aws-sdk": "^2.63.0",
     "browserify": "^14.4.0",
     "fs": "^0.0.1-security",
     "gulp": "^3.9.1",
